Fixed typo in build.yml workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     container: maven:3.8.7-amazoncorretto-17
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       - run: mvn --version
       - run: ls -l
       - run: mvn install
