--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,9 @@ jobs:
       - uses: actions/checkout@v2
       - run: mvn --version
       - run: ls -l
-      - run: mvn install
+      - run: mvn clean install
+      - name: Upload jar file
+        uses: actions/upload-artifact@v3
+        with:
+          name: demo-1.0.0.jar
+          path: ./target/github-actions-demo-0.0.1-SNAPSHOT.jar
