--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.1</version>
+		<version>2.7.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.alpha</groupId>
 	<artifactId>github-actions-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>github-actions-demo</name>
-	<description>A Github Actions Demo project for Spring Boot </description>
+	<description>A GitHub Actions Demo project for Spring Boot </description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
